--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin ": "link:pnpm i -D -w @typescript-eslint/eslint-plugin ",
     "husky": "^8.0.3",
     "prettier": "^2.8.3",
+    "rollup": "^3.10.0",
     "typescript": "^4.9.4"
   }
 }
