--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "手动实现一版react",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages"
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
+    "build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/react.config.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@typescript-eslint/parser": "^5.48.1",
     "commitlint": "^17.4.2",
     "eslint": "^8.31.0",
@@ -21,7 +23,10 @@
     "eslint-plugin ": "link:pnpm i -D -w @typescript-eslint/eslint-plugin ",
     "husky": "^8.0.3",
     "prettier": "^2.8.3",
+    "rimraf": "^5.0.5",
     "rollup": "^3.10.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^4.9.4"
   }
 }
