--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noUnusedParameters": false,
     "noImplicitReturns": false,
     "skipLibCheck": true,
+    "jsx": "react",
     "baseUrl": "./packages",
     "paths": {
       "hostConfig": ["./react-dom/src/hostConfig.ts"]
