--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
     "build:dev": "rimraf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
-    "demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
+    "demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force",
+    "test": "jest --config scripts/jest/jest.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-env": "^7.24.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@typescript-eslint/parser": "^5.48.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "commitlint": "^17.4.2",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -23,15 +30,15 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin ": "link:pnpm i -D -w @typescript-eslint/eslint-plugin ",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.8.3",
     "rimraf": "^5.0.5",
     "rollup": "^3.10.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^4.9.4",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.4"
   },
   "dependencies": {
