--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/scheduler": "^0.16.8",
     "@typescript-eslint/parser": "^5.48.1",
     "@vitejs/plugin-react": "^4.2.1",
     "commitlint": "^17.4.2",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-replace": "^5.0.5"
+    "@rollup/plugin-replace": "^5.0.5",
+    "scheduler": "^0.23.0"
   }
 }
